Bug #7690 'Ndbcluster startup failed'
Submitted: 5 Jan 2005 19:07 Modified: 7 Jan 2005 11:02
Reporter: Joerg Bruehe Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Cluster: Cluster (NDB) storage engine Severity:S3 (Non-critical)
Version:5.0.3-pre OS:various Unix
Assigned to: Jonas Oreland CPU Architecture:Any

[5 Jan 2005 19:07] Joerg Bruehe
Description:
From a 'cluster' build of today's (Jan 5) pull, I get this test output:

=== cut ===
Manager disabled, skipping manager start.
Starting ndbcluster
Starting ndbd
Starting ndbd
Waiting for started...
waitNodeState(STARTED, -1) timeout after 121 attemps
Ndbcluster startup failed
=== cut ===

The latest changeset is
 1.1772 05/01/05 02:19:04 serg@sergbook.mysql.com +1 -0
  reverting the change that results in infinite recursion

This symptom occurs on the following machines:
aix52 (both 32 + 64 bit), hp3750, hpita2, hpux11 (both 32 + 64 bit), intelxeon3, octane2 (both 32 + 64 bit),  sunfire100b, sunfire100c (both 32 + 64 bit).

On barney, the log differs slightly:
=== cut ===
Manager disabled, skipping manager start.
Starting ndbcluster
Starting ndbd
Error handler shutting down system
Error handler shutdown completed - exiting
Starting ndbd
Error handler shutting down system
Error handler shutdown completed - exiting
Waiting for started...
waitNodeState(STARTED, -1) timeout after 121 attemps
Ndbcluster startup failed
Failed to shutdown ndbcluster, executing kill -30966 -31910
=== cut ===

How to repeat:
Build 'cluster' and run tests.
[7 Jan 2005 11:02] Jonas Oreland
Fixed. in 4.1 (merge to 5.0 still pending)