bug#7690 - ndb startup with shm, use sigaction to escape SA_RESETHAND

configure.in:
  Check for sigaction used in SHM_Transporter
ndb/src/common/transporter/SHM_Transporter.cpp:
  remove unused variable
ndb/src/common/transporter/TransporterRegistry.cpp:
  1) remove unused variable
  2) Use sigaction instead of signal to install signal handler
     This as signal uses SA_RESETHAND